# sc2ladder

./: .gitignore  .travis.yml  Pipfile  Procfile  README.md  app.py  db.py  fetch.py  manage.py  parse.py  player.py  pyproject.toml  requirements.txt  sort.py  update_db.py
app/: admin.py  models.py  serializers.py  urls.py  views.py
app/management/commands/: load_data.py  prune_old_data.py  record_player_snapshots.py  update_db.py
app/migrations/: 0001_initial.py  0002_auto_20190617_0137.py  0003_auto_20190618_0634.py  0004_auto_20190708_1146.py  0005_ladder.py  0006_player_game_link.py  0007_auto_20200322_1857.py
app/models/: fields.py  identity.py  ladder.py  player.py  player_snapshot.py
app/src/: fetch.py  laddercrawler.py  parse.py  s2ladderapi.py  sc2publicapi.py  update_db.py
app/static/css/: about.css  common.css  main.css  navbar.css  player.css  search.css
app/static/js/: navbar.js  search.js  submitform.js
app/templates/: about.html  base.html  index.html  player.html  search.html
app/tests/: one_player.json  test_api.py  test_update_db.py
sc2ladder/: discord_logger.py  jinja2.py  settings.py  urls.py  wsgi.py
sc2ladder/settings/: common.py  development.py  production.py
shared/: constants.py
static/css/: about.css  main.css  navbar.css  search.css
static/js/: navbar.js  search.js
templates/: about.html  base.html  home.html  search.html
