[tool.poetry]
name = "sc2ladder"
version = "1.0.0"
description = ""
authors = [
    "YenFu1 <e6lu@edu.uwaterloo.ca>",
    "jteague9 <jteague9@gatech.edu>",
    "tso <tohlson@squareup.com>",
    "WilliamStewart <william.stewart@plasticmobile.com>"
]
license = "MIT"

[tool.taskipy.tasks]
requirements = "poetry export --format=requirements.txt --without-hashes > requirements.txt"
style = "isort --apply && black ."
start = "python manage.py runserver"
test = "python manage.py test"

[tool.black]
max-line-length = 88

[tool.isort]
multi_line_output = 3
include_trailing_comma = true

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.14"
requests = "^2.23.0"
aiohttp = "^3.6.2"
django-enumfields = "^2.0.0"
jinja2 = "^2.11.1"
psycopg2 = "^2.8.4"
django-heroku = "^0.3.1"
gunicorn = "^20.0.4"
django-waffle = "^0.20.0"
django-constance = { version = "^2.6.0", extras = ["database"] }
psycopg2-binary = "^2.8.4"
uplink = "^0.9.1"
django-redis = "^4.12.1"

[tool.poetry.dev-dependencies]
isort = "^4.3.21"
black = "^19.10b0"
taskipy = "^1.2.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
